Implementing functionality, adding more tests, fixing issues in skeleton